@@ -13,10 +13,10 @@ Works by reading game log file (\AppData\Local\Prospect\Saved\Logs\Prospect.log)
 Tested on TCF 3.2.0, Win10, OpenJDK 17, 2560x1440.
 
 # How to use
-1. Take latest JAR from releases (or build it by yourself)
+1. Take latest JAR from releases (or build it by yourself with `mvn clean package shade:shade`)
 2. Make sure you have Java **17+**
 3. Open CMD and `cd` to directory of your jar
-4. Launch it by typing `java --enable-preview -jar cycle.jar`
+4. Launch it by typing `java -jar cycle.jar`
 
 # What does it look like
 (top right corner)
